# Uls

./: CMakeLists.txt  Makefile  main.c  mx_array_filling.c  mx_dirwalk.c  mx_fill_arr_file.c  mx_get_permissions.c  mx_get_type_file.c  mx_get_ugid.c  mx_init_m_struct.c  mx_print_acl.c  mx_print_long.c  mx_print_specific_time.c  mx_sort_struct.c  mx_standard_format.c  other.xml  uls  uls.h  updates.xml
Libmx/: Makefile  libmx.h  main.c  mx_count_substr.c  mx_del_extra_spaces.c  mx_itoa.c  mx_strncmp.c  mx_strstr.c
Libmx/inc/: libmx.h
Libmx/src/: mx_binary_search.c  mx_bubble_sort.c  mx_create_node.c  mx_memcmp.c  mx_pop_back.c  mx_pop_front.c  mx_strcmp.c  mx_strsplit.c
_mac/: cpp.toolchains.xml
inc/: uls.h
src/: main.c  mx_abs_path.c  mx_array_count.c  mx_clean_struct.c  mx_dirwalk.c  mx_filling_array_dir.c  mx_get_permissions.c  mx_get_type_file.c  mx_get_ugid.c  mx_init_m_struct.c  mx_minor_major.c  mx_parser.c  mx_print_acl.c  mx_print_arg_name.c  mx_print_long.c  mx_print_recursive.c  mx_print_total_blocks.c  mx_sort_struct.c  mx_standard_format.c
